2011-10-25  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2011-09-28  Jan Beulich  <jbeulich@suse.com>
	* ppc-opc.c (insert_nbi, insert_rbx, FRAp, FRBp, FRSp, FRTp, NBI, RAX,
	RBX): New.
	(insert_bo, insert_boe): Reject bcctr with bit 2 in bo unset.
	(powerpc_opcodes): Use RAX for second and RBXC for third operand of
	lswx. Use NBI for third operand of lswi. Use FRTp for first operand of
	lfdp and lfdpx. Use FRSp for first operand of stfdp and stfdpx, and
	mark them as invalid on POWER7. Use FRTp, FRAp, and FRBp repsectively
	on DFP quad instructions.

2011-09-21  David S. Miller  <davem@davemloft.net>

	* sparc-opc.c (sparc_opcodes): Annotate table with HWCAP flag
	bits.  Fix "fchksm16" mnemonic.

2011-09-08  Mark Fortescue <mark@mtfhpc.demon.co.uk>

	The changes below bring 'mov' and 'ticc' instructions into line
	with the V8 SPARC Architecture Manual.
	* sparc-opc.c (sparc_opcodes): Add entry for 'ticc imm + regrs1'.
	* sparc-opc.c (sparc_opcodes): Add alias entries for
	'mov regrs2,%asrX'; 'mov regrs2,%y'; 'mov regrs2,%prs';
	'mov regrs2,%wim' and 'mov regrs2,%tbr'.
	* sparc-opc.c (sparc_opcodes): Move/Change entries for
	'mov imm,%asrX'; 'mov imm,%y'; 'mov imm,%prs'; 'mov imm,%wim'
	and 'mov imm,%tbr'.
	* sparc-opc.c (sparc_opcodes): Add wr alias entries to match above
	mov aliases.

	* sparc-opc.c (sparc_opcodes): Add entry for 'save simm13,regrs1,regrd'
	This has been reported as being accepted by the Sun assmebler.

2011-09-08  David S. Miller  <davem@davemloft.net>

	* sparc-opc.c (pdistn): Destination is integer not float register.

2011-09-07  Andreas Schwab  <schwab@linux-m68k.org>

	PR gas/13145
	* m68k-opc.c: Use "y" in moveml pattern for mcfisa_a.

2011-08-26  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2011-08-22  Nick Clifton  <nickc@redhat.com>

	* Makefile.am (CPUDIR): Redfine to point to top level cpu
	directory.
	(stamp-frv): Use CPUDIR.
	(stamp-iq2000): Likewise.
	(stamp-lm32): Likewise.